# amplifier-bundle-containers

./: .gitignore  DESIGN.md  README.md  bundle.md  pyproject.toml  pytest.ini  ruff.toml
agents/: container-operator.md
behaviors/: container-safety.yaml  containers.yaml
context/: container-awareness.md  container-guide.md
docs/: ISSUE-delegate-session-id-sanitization.md  PLAN.md
images/amplifier-base/: Dockerfile
modules/hooks-container-safety/: pyproject.toml
modules/hooks-container-safety/amplifier_module_hooks_container_safety/: __init__.py
modules/tool-containers/: pyproject.toml
modules/tool-containers/amplifier_module_tool_containers/: __init__.py  compose.py  images.py  provisioner.py  runtime.py
modules/tool-containers/tests/: test_create_add_hosts.py  test_provision_git.py
tests/: conftest.py
tests/integration/: test_containers.py  test_phase2.py
tests/unit/: test_compose.py  test_hooks_safety.py  test_images.py  test_metadata.py  test_provisioner.py  test_runtime.py  test_tool.py
