[project]
name = "amplifier-bundle-containers"
version = "0.1.0"
description = "Container management bundle for Amplifier"
requires-python = ">=3.11"
license = "MIT"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring Docker/Podman (deselect with '-m not integration')",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pyright]
pythonVersion = "3.11"
