# Tool configuration only — bundles are NOT installable Python packages.
# Only modules inside modules/ have their own pyproject.toml with [project].

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring Docker/Podman (deselect with '-m not integration')",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pyright]
pythonVersion = "3.11"
