# Bundle root — NOT a Python package itself.
# Only modules inside modules/ have their own installable pyproject.toml.
# This file provides: build-system (to prevent setuptools auto-discovery errors)
# and tool configuration (pytest, ruff, pyright).

[project]
name = "amplifier-bundle-containers"
version = "0.1.0"
description = "Container management bundle for Amplifier (not an installable package)"
requires-python = ">=3.11"
license = "MIT"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring Docker/Podman (deselect with '-m not integration')",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pyright]
pythonVersion = "3.11"
