[project]
name = "amplifier-module-hooks-container-safety"
version = "0.1.0"
description = "Safety policies for container operations (approval gates, cleanup, limits)"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_container_safety"]

[project.entry-points."amplifier.modules"]
hooks-container-safety = "amplifier_module_hooks_container_safety:mount"
