[project]
name = "amplifier-module-tool-containers"
version = "0.1.0"
description = "Container management tool for Amplifier agents"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_containers"]

[project.entry-points."amplifier.modules"]
tool-containers = "amplifier_module_tool_containers:mount"
